@@ -42,6 +42,9 @@
             "tahlan_champion_dmn_gluttony":1,
             "tahlan_champion_dmn_striker":1,
             "tahlan_champion_dmn_brawler":1,
+            "tahlan_kodai_dmn_blighter":1,
+            "tahlan_kodai_dmn_carnage":1,
+            "tahlan_kodai_dmn_sniper":1,
             "tahlan_hammerhead_dmn_combat":1,
             "tahlan_hammerhead_dmn_greed":1,
             "tahlan_hammerhead_dmn_sniper":1,
@@ -51,17 +54,23 @@
             "tahlan_manticore_dmn_needler":1,
             "tahlan_manticore_dmn_overdriven":2,
             "tahlan_manticore_dmn_wrath":1,
+            "tahlan_sunder_dmn_rage":1,
+            "tahlan_sunder_dmn_ranger":2,
+            "tahlan_sunder_dmn_reaper":2,
             "tahlan_vanguard_dmn_envy":4,
             "tahlan_vanguard_dmn_assault":4,
             "tahlan_centurion_dmn_deva":2,
             "tahlan_centurion_dmn_lust":2,
             "tahlan_centurion_dmn_sniper":2,
-            "tahlan_centurion_dmn_heavy":2
+            "tahlan_centurion_dmn_heavy":2,
+            "tahlan_hound_dmn_blaster":5,
+            "tahlan_hound_dmn_rampager":5,
+            "tahlan_hound_dmn_skirmisher":5
         },
         "fleet_preset_autofit": false,
         "fleet_scaling_multiplier": 1.2,
         "fleet_min_FP": 300,
-        "fleet_composition_faction": "tahlan_legioninfernalis",
+        "fleet_composition_faction": "tahlan_legioelite",
         "fleet_composition_quality": 1,
         "fleet_transponder": false,
 		"fleet_no_retreat": true,
